Backported upstream TS GPIO driver.  Added back "base" option to provide more consistent IO numbering.  This matches our older kernels, but not upstream.  The dynamic allocation counts back from ARCH_NR_GPIOS which is a magic number, currently 512.  I'm expecting this behavior to change because over the years we have had to bump up this number when it is not enough in the past for custom boards.  I'm expecting ARCH_NR_GPIOS to go away in its current form which would change how dynamic GPIO are assigned.

--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -287,13 +287,13 @@
 	scl-gpios = <&gpio3 6 GPIO_ACTIVE_HIGH>;
 	sda-gpios = <&gpio3 5 GPIO_ACTIVE_HIGH>;
 
-	gpio6: tsgpio@28 {
-		compatible = "technologic,tsgpio";
+	gpio6: gpio@28 {
+		compatible = "technologic,ts7970-gpio";
 		reg = <0x28>;
 		#gpio-cells = <2>;
 		gpio-controller;
 		base = <160>;
-		ngpio = /bits/ 16 <128>;
+		ngpio = <128>;
 	};
 
 	rtc: m41t00s@68 {
