Added support for a GPIO-based Auto-tx-enable for RS-485. The GPIO to use is specified in device-tree, for example...    fsl,uart-tx-enable-gpios = <&gpio1 18 GPIO_ACTIVE_HIGH>;
Note that "fsl,uart-has-rtscts;" is also required for this to work.

--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -210,12 +210,14 @@
 	pinctrl-0 = <&pinctrl_uart3>;
 	status = "okay";
 	fsl,uart-has-rtscts;
+	fsl,uart-tx-enable-gpios = <&gpio1 18 GPIO_ACTIVE_HIGH>; /* SPARE_1 */
 };
 
 &uart4 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
 	status = "okay";
+	fsl,uart-has-rtscts;
 };
 
 &uart5 {
