TS-7553-V2:   Checked/fixed all pin modes

--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -114,7 +114,6 @@
 			enable-active-high;
 		};
 
-		/* Not connected to real IO on 7180, hooked up on TS-7553-V2 */
 		reg_sd1_vmmc: sd1_vmmc {
 			compatible = "regulator-fixed";
 			regulator-name = "SD1_SPWR";
@@ -338,40 +337,41 @@
 	imx6ul-ts7180 {
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
+				/* All GPIO should be 0x1b020 unless special
+				 * 0x1b020 == Hyst., 100k PU, 50 mA drive
+				 * 0x1a020 == no pull resistor
+				 * 0x13020 == 100k PD
+				 */
 				MX6UL_PAD_JTAG_TCK__GPIO1_IO14       0x1b020
 				MX6UL_PAD_JTAG_TDI__GPIO1_IO13       0x1b020
 				MX6UL_PAD_JTAG_TDO__GPIO1_IO12       0x1b020
 				MX6UL_PAD_JTAG_TMS__GPIO1_IO11       0x1b020
 				MX6UL_PAD_JTAG_TRST_B__GPIO1_IO15    0x1b020
-				MX6UL_PAD_CSI_DATA00__GPIO4_IO21     0x1b020 /* KEYPAD_0 */
-				MX6UL_PAD_CSI_DATA01__GPIO4_IO22     0x1b020 /* KEYPAD_1 */
-				MX6UL_PAD_CSI_DATA02__GPIO4_IO23     0x1b020 /* KEYPAD_2 */
-				MX6UL_PAD_CSI_DATA03__GPIO4_IO24     0x1b020 /* KEYPAD_3 */
+				MX6UL_PAD_CSI_DATA00__GPIO4_IO21     0x1a020 /* KEYPAD_0 */
+				MX6UL_PAD_CSI_DATA01__GPIO4_IO22     0x1a020 /* KEYPAD_1 */
+				MX6UL_PAD_CSI_DATA02__GPIO4_IO23     0x1a020 /* KEYPAD_2 */
+				MX6UL_PAD_CSI_DATA03__GPIO4_IO24     0x1a020 /* KEYPAD_3 */
 				MX6UL_PAD_UART2_RTS_B__GPIO1_IO23    0x1b020 /* EN_232_TRANS */
-				/* TODO: Enable PD on DETECT_9471 */
-				MX6UL_PAD_CSI_DATA07__GPIO4_IO28     0x1b020 /* DETECT_9471 */
+				MX6UL_PAD_CSI_DATA07__GPIO4_IO28     0x13020 /* DETECT_9471 */
 				MX6UL_PAD_SNVS_TAMPER0__GPIO5_IO00   0x1b020 /* POWER_FAIL */
-				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08   0x1b020 /* EN_RELAY */
-				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14    0x1b020 /* XBEE_DIO_8 */
+				MX6UL_PAD_SNVS_TAMPER8__GPIO5_IO08   0x1a020 /* EN_RELAY */
+				MX6UL_PAD_ENET2_TX_CLK__GPIO2_IO14   0x1b020 /* XBEE_DIO_8 */
 				MX6UL_PAD_ENET2_RX_DATA0__GPIO2_IO08 0x1b020 /* XBEE_DIO_7 */
 				MX6UL_PAD_ENET2_RX_DATA1__GPIO2_IO09 0x1b020 /* XBEE_DIO_6 */
 				/* TODO: Verify this clk */
 				MX6UL_PAD_ENET2_TX_DATA0__REF_CLK_24M 0x1b020 /* USB Hhub 24MHz */
-				MX6UL_PAD_ENET2_TX_DATA1__GPIO2_IO12 0x1b020 /* SILAB_C2_RESET */
-				/* TODO: Add PU on PWM_MODE and set low when sleeping */
+				MX6UL_PAD_ENET2_TX_DATA1__GPIO2_IO12 0x1a020 /* SILAB_C2_RESET */
 				MX6UL_PAD_ENET2_TX_EN__GPIO2_IO13    0x1b020 /* FORCE_REG_PWM_MODE */
-				MX6UL_PAD_LCD_DATA02__GPIO3_IO07     0x1b020 /* 6UL_TO_USB_DEV */
-				/* TODO: Do not set pull resistor */	
-				MX6UL_PAD_LCD_DATA03__GPIO3_IO08     0x1b020 /* 6UL_FORCE_5V_ON */
-				MX6UL_PAD_LCD_DATA04__GPIO3_IO09     0x1b020 /* SILAB_C2_CLK */
-				MX6UL_PAD_LCD_DATA05__GPIO3_IO10     0x1b020 /* SILAB_CS_DATA# */
-				MX6UL_PAD_LCD_DATA06__GPIO3_IO11     0x1b020 /* NO_CHRG_JMP# */
-				MX6UL_PAD_LCD_DATA12__GPIO3_IO17     0x1b020 /* SD_BOOT_JMP# */
+				MX6UL_PAD_LCD_DATA02__GPIO3_IO07     0x1a020 /* 6UL_TO_USB_DEV */
+				MX6UL_PAD_LCD_DATA03__GPIO3_IO08     0x1a020 /* 6UL_FORCE_5V_ON */
+				MX6UL_PAD_LCD_DATA04__GPIO3_IO09     0x1a020 /* SILAB_C2_CLK */
+				MX6UL_PAD_LCD_DATA05__GPIO3_IO10     0x1a020 /* SILAB_CS_DATA# */
+				MX6UL_PAD_LCD_DATA06__GPIO3_IO11     0x1a020 /* NO_CHRG_JMP# */
+				MX6UL_PAD_LCD_DATA12__GPIO3_IO17     0x1a020 /* SD_BOOT_JMP# */
 				MX6UL_PAD_LCD_DATA13__GPIO3_IO18     0x1b020 /* PUSH_SW_CPU# */
-				MX6UL_PAD_LCD_DATA14__GPIO3_IO19     0x1b020 /* U_BOOT_JMP#_ */
+				MX6UL_PAD_LCD_DATA14__GPIO3_IO19     0x1a020 /* U_BOOT_JMP#_ */
 				MX6UL_PAD_LCD_DATA15__GPIO3_IO20     0x1b020 /* XBEE_RESET# */
 				MX6UL_PAD_LCD_CLK__GPIO3_IO00        0x1b020 /* USB_HUB_RESET */
-				/* TODO: Add PU on the strap pins */
 				MX6UL_PAD_LCD_DATA18__GPIO3_IO23     0x1b020 /* RES_STRAP_0 */
 				MX6UL_PAD_LCD_DATA19__GPIO3_IO24     0x1b020 /* RES_STRAP_1 */
 				MX6UL_PAD_LCD_DATA22__GPIO3_IO27     0x1b020 /* RES_STRAP_2 */
@@ -383,13 +383,13 @@
 		pinctrl_usb_otg1_id: usbotg1idgrp {
 			/* Wired always high for device mode on TS-7553-V2 */
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO00__ANATOP_OTG1_ID	0x17059
+				MX6UL_PAD_GPIO1_IO00__ANATOP_OTG1_ID	0x16059
 			>;
 		};
 
 		pinctrl_usb_otg1: usbotg1grp {
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0x10b0
+				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02      0x1b020
 			>;
 		};
 
@@ -424,7 +424,6 @@
 
 		pinctrl_uart3: uart3grp {
 			fsl,pins = <
-				/* TODO: Enable PU on RX and CTS/RTS? */
 				MX6UL_PAD_UART3_RX_DATA__UART3_DCE_RX	0x1b0b1
 				MX6UL_PAD_UART3_TX_DATA__UART3_DCE_TX	0x1b0b1
 				MX6UL_PAD_UART3_CTS_B__UART3_DCE_CTS	0x1b0b1
@@ -464,7 +463,6 @@
 
 		pinctrl_uart8: uart8grp {
 			fsl,pins = <
-				/* TODO: Enable PU on XBee RX */
 				MX6UL_PAD_LCD_DATA21__UART8_DCE_RX	0x1b0b1
 				MX6UL_PAD_LCD_DATA20__UART8_DCE_TX	0x1b0b1
 			>;
@@ -481,41 +479,41 @@
 				MX6UL_PAD_ENET1_TX_EN__ENET1_TX_EN	0x1b0b0
 				MX6UL_PAD_ENET1_TX_DATA0__ENET1_TDATA00	0x1b0b0
 				MX6UL_PAD_ENET1_TX_DATA1__ENET1_TDATA01	0x1b0b0
-				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x4001b031
+				MX6UL_PAD_ENET1_TX_CLK__ENET1_REF_CLK1	0x1b031
 			>;
 		};
 
 		pinctrl_wdog: wdoggrp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_RESET__WDOG1_WDOG_ANY    0x30b0
+				MX6UL_PAD_LCD_RESET__WDOG1_WDOG_ANY     0x30b0
 			>;
 		};
 
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO02__I2C1_SCL 0x4001b8b0
-				MX6UL_PAD_GPIO1_IO03__I2C1_SDA 0x4001b8b0
+				MX6UL_PAD_GPIO1_IO02__I2C1_SCL          0x1a8b0
+				MX6UL_PAD_GPIO1_IO03__I2C1_SDA          0x1a8b0
 			>;
 		};
 
 		pinctrl_i2c1_gpio: i2c1grpgpio {
 			fsl,pins = <
-				MX6UL_PAD_GPIO1_IO02__GPIO1_IO02 0x4001b8b0
-				MX6UL_PAD_GPIO1_IO03__GPIO1_IO03 0x4001b8b0
+				MX6UL_PAD_GPIO1_IO02__GPIO1_IO02        0x1a8b0
+				MX6UL_PAD_GPIO1_IO03__GPIO1_IO03        0x1a8b0
 			>;
 		};
 
 		pinctrl_i2c3: i2c3grp {
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA01__I2C3_SCL 0x4001b8b0
-				MX6UL_PAD_LCD_DATA00__I2C3_SDA 0x4001b8b0
+				MX6UL_PAD_LCD_DATA01__I2C3_SCL          0x1a8b0
+				MX6UL_PAD_LCD_DATA00__I2C3_SDA          0x1a8b0
 			>;
 		};
 
 		pinctrl_i2c3_gpio: i2c3grpgpio {
 			fsl,pins = <
-				MX6UL_PAD_LCD_DATA01__GPIO3_IO06 0x4001b8b0
-				MX6UL_PAD_LCD_DATA00__GPIO3_IO05 0x4001b8b0
+				MX6UL_PAD_LCD_DATA01__GPIO3_IO06        0x1a8b0
+				MX6UL_PAD_LCD_DATA00__GPIO3_IO05        0x1a8b0
 			>;
 		};
 
@@ -569,30 +567,29 @@
 		/* Add additional control signals here, not consumed in hog */
 		pinctrl_ecspi3: ecspi3grp {
 			fsl,pins = <
-				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x10b0 /* SPI_3_FPGA_CS# CS0*/
-				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x10b0
-				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x10b0
-				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x10b0
-				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15   0x10b0 /* HD1_SPI_CS# CS1 */
+				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x1b020 /* SPI_3_FPGA_CS# CS0*/
+				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x1b020
+				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x1b020
+				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x1b020
+				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15   0x1b020 /* HD1_SPI_CS# CS1 */
 			>;
 		};
 
 		pinctrl_ecspi4: ecspi4grp {
 			fsl,pins = <
-				MX6UL_PAD_NAND_DATA04__ECSPI4_SCLK  0x10b0
-				MX6UL_PAD_NAND_DATA05__ECSPI4_MOSI  0x10b0
-				MX6UL_PAD_NAND_DATA06__ECSPI4_MISO  0x10b0
-				MX6UL_PAD_NAND_DATA07__GPIO4_IO09   0x10b0  /* WIFI CS# */
+				MX6UL_PAD_NAND_DATA04__ECSPI4_SCLK  0x1b020
+				MX6UL_PAD_NAND_DATA05__ECSPI4_MOSI  0x1b020
+				MX6UL_PAD_NAND_DATA06__ECSPI4_MISO  0x1b020
+				MX6UL_PAD_NAND_DATA07__GPIO4_IO09   0x1b020  /* WIFI CS# */
 				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01  0x1b020 /* WIFI_IRQ# */
 				MX6UL_PAD_NAND_ALE__GPIO4_IO10      0x1b020 /* WIFI_RESET# */
-				/* TODO: Enable PU on IRQ */
 				MX6UL_PAD_CSI_DATA05__GPIO4_IO26    0x1b020 /* CHIP_EN (EN_WIFI_PWR) */
 			>;
 		};
 
 		pinctrl_dvfs: dvfsgrp {
 			fsl,pins = <
-				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03	0x79
+				MX6UL_PAD_SNVS_TAMPER3__GPIO5_IO03  0x1b0a0
 			>;
 		};
 	};
