--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -99,6 +99,16 @@
 			gpio = <&gpio5 9 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
+		
+		reg_adc_vref: adc_vref {
+			compatible = "regulator-fixed";
+			regulator-name = "ADC_VREF";
+			regulator-min-microvolt = <2500000>;
+			regulator-max-microvolt = <2500000>;
+			//gpio = EN_2.5_VREF driven by Silabs;
+			//enable-active-high;
+		};
+		
 	};
 
 	/*pps {
@@ -225,6 +235,8 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart4>;
 	status = "okay";
+	fsl,uart-has-rtscts;
+	fsl,uart-tx-enable-gpios = <&gpio1 19 GPIO_ACTIVE_HIGH>; /* SPARE_2 */
 };
 
 &uart5 {
@@ -327,6 +339,14 @@
 	fsl,wdog_b;
 };
 
+&adc1 {
+   pinctrl-names = "default";
+   pinctrl-0 = <&pinctrl_adc>;
+   vref-supply = <&reg_adc_vref>;
+   num-channels = <10>;
+	status = "okay";
+};
+
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog>;
@@ -334,7 +354,6 @@
 		pinctrl_hog: hoggrp {
 			fsl,pins = <
 				MX6UL_PAD_UART1_CTS_B__GPIO1_IO18    0x1b020 /* SPARE_1 */
-				MX6UL_PAD_UART1_RTS_B__GPIO1_IO19    0x1b020 /* SPARE_2 */
 
 
 				MX6UL_PAD_GPIO1_IO01__GPIO1_IO01     0x17059 /* GPIO_1_ADC */
@@ -344,10 +363,13 @@
 				MX6UL_PAD_SNVS_TAMPER1__GPIO5_IO01   0x1b020 /* FPGA_IRQ */
 				MX6UL_PAD_SNVS_TAMPER2__GPIO5_IO02   0x1b020 /* EN_FPGA_PWR */
 				MX6UL_PAD_NAND_WP_B__GPIO4_IO11      0x1b020 /* FPGA_RESET# */
-				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04   0x1b020 /* JTAG_FPGA_TDO */
-				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05   0x1b020 /* JTAG_FPGA_TDI */
-				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06   0x1b020 /* JTAG_FPGA_TMS */
-				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07   0x1b020 /* JTAG_FPGA_TCK */
+				MX6UL_PAD_SNVS_TAMPER4__GPIO5_IO04   0x1b020 /* ADC_1 */
+				MX6UL_PAD_SNVS_TAMPER5__GPIO5_IO05   0x1b020 /* ADC_2 */
+				MX6UL_PAD_SNVS_TAMPER6__GPIO5_IO06   0x1b020 /* ADC_3 */
+				MX6UL_PAD_SNVS_TAMPER7__GPIO5_IO07   0x1b020 /* ADC_4 */
+				
+				
+				
 			>;
 		};
 
@@ -403,7 +425,9 @@
 		pinctrl_uart4: uart4grp {
 			fsl,pins = <
 				MX6UL_PAD_UART4_RX_DATA__UART4_DCE_RX	0x1b0b1
-				MX6UL_PAD_UART4_TX_DATA__UART4_DCE_TX	0x1b0b1
+				MX6UL_PAD_UART4_TX_DATA__UART4_DCE_TX	0x1b0b1				
+			   MX6UL_PAD_UART1_RTS_B__GPIO1_IO19    0x13020 /* SPARE_2 EN_485 */
+
 			>;
 		};
 
@@ -424,10 +448,10 @@
 		pinctrl_uart8: uart8grp {
 			fsl,pins = <
 			   MX6UL_PAD_LCD_DATA21__UART8_DCE_RX	0x1b0b1  /* RXD_GPS */
-			   MX6UL_PAD_LCD_DATA20__UART8_DCE_TX	0x1b0b1	/* TXD_GPS */
+				MX6UL_PAD_LCD_DATA20__UART8_DCE_TX	0x1b0b1	/* TXD_GPS */
 			>;
 		};
-
+		
 		pinctrl_sai2: sai2grp {
 			fsl,pins = <
 				MX6UL_PAD_JTAG_TDI__SAI2_TX_BCLK	0x17088
@@ -510,10 +534,19 @@
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2    0x17059
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3    0x17059
 				MX6UL_PAD_SNVS_TAMPER9__GPIO5_IO09   0x17059 /* EN_SD_POWER */
-				MX6UL_PAD_GPIO1_IO05__USDHC1_VSELECT 0x17059 /* SD1 VSELECT */
+				
+			// disable for testing adc1	
+			/*	MX6UL_PAD_GPIO1_IO05__USDHC1_VSELECT 0x17059 */ /* SD1 VSELECT */
 			>;
 		};
 
+		
+		pinctrl_adc: adcgrp {
+		   fsl,pins = <		      
+				MX6UL_PAD_GPIO1_IO05__GPIO1_IO05  0x00b0    /* ADC_1 */
+		   >;
+		};   
+		
 		pinctrl_usdhc1_100mhz: usdhc1grp100mhz {
 			fsl,pins = <
 				MX6UL_PAD_SD1_CMD__USDHC1_CMD     0x170b9
@@ -534,8 +567,7 @@
 				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2 0x170f9
 				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3 0x170f9
 			>;
-		};
-
+      };
 		pinctrl_usdhc2: usdhc2grp {
 			fsl,pins = <
 				MX6UL_PAD_NAND_RE_B__USDHC2_CLK     0x10069
