Removed ts7553v2_defconfig and moved to common tsimx6ul_defconfig

--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -719,7 +719,10 @@ CONFIG_NET_PTP_CLASSIFY=y
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
 # CONFIG_L2TP is not set
-# CONFIG_BRIDGE is not set
+CONFIG_STP=y
+CONFIG_BRIDGE=y
+CONFIG_BRIDGE_IGMP_SNOOPING=y
+CONFIG_BRIDGE_VLAN_FILTERING=y
 CONFIG_HAVE_NET_DSA=y
 CONFIG_VLAN_8021Q=y
 # CONFIG_VLAN_8021Q_GVRP is not set
@@ -1298,8 +1301,17 @@ CONFIG_MICREL_PHY=y
 # CONFIG_MDIO_BUS_MUX_MMIOREG is not set
 # CONFIG_MDIO_BCM_UNIMAC is not set
 # CONFIG_MICREL_KS8995MA is not set
-# CONFIG_PPP is not set
+CONFIG_PPP=m
+CONFIG_PPP_BSDCOMP=m
+CONFIG_PPP_DEFLATE=m
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=m
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOE=m
+CONFIG_PPP_ASYNC=m
+CONFIG_PPP_SYNC_TTY=m
 # CONFIG_SLIP is not set
+CONFIG_SLHC=m
 CONFIG_USB_NET_DRIVERS=y
 # CONFIG_USB_CATC is not set
 # CONFIG_USB_KAWETH is not set
@@ -1369,6 +1381,12 @@ CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/bcm/ZP_BCM4339/bcmdhd.ZP.OOB.cal"
 # CONFIG_MWIFIEX is not set
 # CONFIG_CW1200 is not set
 # CONFIG_RSI_91X is not set
+CONFIG_ATMEL_SMARTCONNECT=y
+CONFIG_WILC3000=y
+# CONFIG_WILC3000_SDIO is not set
+CONFIG_WILC3000_SPI=y
+# CONFIG_WILC3000_DEBUG is not set
+# CONFIG_WILC1000 is not set
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
