--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -2014,6 +2014,7 @@ CONFIG_WATCHDOG_CORE=y
 # CONFIG_XILINX_WATCHDOG is not set
 # CONFIG_CADENCE_WATCHDOG is not set
 # CONFIG_DW_WATCHDOG is not set
+CONFIG_TS_WDT_MICRO=y
 # CONFIG_MAX63XX_WATCHDOG is not set
 CONFIG_IMX2_WDT=y
 # CONFIG_MEN_A21_WDT is not set
