--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -133,7 +133,7 @@
 
 &ecspi3 {
 	fsl,spi-num-chipselects = <2>;
-	cs-gpios = <&gpio4 12 0>, <&gpio2 7 0>;
+	cs-gpios = <&gpio4 12 0>, <&gpio2 15 0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3>;
 	status = "okay";
@@ -141,7 +141,7 @@
 	spidevlcd: spi@0 {
 		compatible = "spidev";
 		reg = <0>;
-		spi-max-frequency = <1000000>;
+		spi-max-frequency = <5000000>;
 	};
 
 	spidevdc: spi@1 {
@@ -573,15 +573,17 @@
 			>;
 		};
 
-		/* TODO: Add in support for the graphical LCD */
-		/* Add additional control signals here, not consumed in hog */
 		pinctrl_ecspi3: ecspi3grp {
 			fsl,pins = <
-				MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x1b020 /* SPI_3_FPGA_CS# CS0*/
-				MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x1b020
-				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x1b020
-				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x1b020
-				MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15   0x1b020 /* HD1_SPI_CS# CS1 */
+            MX6UL_PAD_CSI_DATA04__GPIO4_IO25 	0x1b020 /* EN_LCD_BK_LT (gpio121) */
+            MX6UL_PAD_NAND_WP_B__GPIO4_IO11 	0x1b020 /* LCD_RESET#   (gpio107) */
+            MX6UL_PAD_NAND_DQS__GPIO4_IO16  	0x1b020 /* LCD_CMD#     (gpio112) */
+
+            MX6UL_PAD_NAND_READY_B__GPIO4_IO12  0x1b020 /* SPI_3_LCD_CS# CS0 */
+            MX6UL_PAD_NAND_CE0_B__ECSPI3_SCLK   0x1b020 /* SPI_3_CLK         */
+            MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x1b020 /* SPI_3_MOSI        */
+            MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x1b820 /* SPI_3_MISO        */
+            MX6UL_PAD_ENET2_RX_ER__GPIO2_IO15   0x1b020 /* HD1_SPI_CS# CS1   */
 			>;
 		};
 
