Set WILC3000 driver to be a module in tsimx6ul defconfig   Mitigates issue with NFS loading kernel and driver attempting to get   firmware before filesystem is ready.

--- a/arch/arm/configs/tsimx6ul_defconfig
+++ b/arch/arm/configs/tsimx6ul_defconfig
@@ -1382,7 +1382,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/lib/firmware/bcm/ZP_BCM4339/bcmdhd.ZP.OOB.cal"
 # CONFIG_CW1200 is not set
 # CONFIG_RSI_91X is not set
 CONFIG_ATMEL_SMARTCONNECT=y
-CONFIG_WILC3000=y
+CONFIG_WILC3000=m
 # CONFIG_WILC3000_SDIO is not set
 CONFIG_WILC3000_SPI=y
 # CONFIG_WILC3000_DEBUG is not set
