--- a/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7970.dtsi
@@ -312,14 +312,13 @@
 		reg = <0x6f>;
 	};
 
-
-	gpio8: tsgpio@28 {
-		compatible = "technologic,tsgpio-2bitio";
+	gpio8: gpio@28 {
+		compatible = "technologic,ts7970-gpio";
 		reg = <0x28>;
 		#gpio-cells = <2>;
 		gpio-controller;
 		base = <224>;
-		ngpio = /bits/ 16 <64>;
+		ngpio = <64>;
 	};
 
 	sgtl5000: sgtl5000@0a {
