--- a/arch/arm/boot/dts/imx6qdl-ts7990.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts7990.dtsi
@@ -353,13 +353,13 @@
 		interrupt-route = <1>;
 	};
 
-	gpio8: tsgpio@28 {
-		compatible = "technologic,tsgpio-2bitio";
+	gpio8: gpio@28 {
+		compatible = "technologic,ts7970-gpio";
 		reg = <0x28>;
 		#gpio-cells = <2>;
 		gpio-controller;
 		base = <224>;
-		ngpio = /bits/ 16 <64>;
+		ngpio = <64>;
 	};
 };
 
