--- a/arch/arm/configs/ts4900_android_defconfig
+++ b/arch/arm/configs/ts4900_android_defconfig
@@ -1732,7 +1732,14 @@ CONFIG_BRCMFMAC_SDIO=y
 # CONFIG_P54_COMMON is not set
 # CONFIG_RT2X00 is not set
 # CONFIG_RTL_CARDS is not set
-# CONFIG_WL_TI is not set
+CONFIG_WL_TI=y
+# CONFIG_WL1251 is not set
+CONFIG_WL12XX=m
+# CONFIG_WL18XX is not set
+CONFIG_WLCORE=y
+# CONFIG_WLCORE_SPI is not set
+CONFIG_WLCORE_SDIO=y
+CONFIG_WILINK_PLATFORM_DATA=y
 # CONFIG_ZD1211RW is not set
 # CONFIG_MWIFIEX is not set
 # CONFIG_CW1200 is not set
