Added imx UART driver support for dt option linux,rs485-enabled-at-boot-time;   Allows device tree to specify default to use TXEN
TS-7553-V2:
  Added linux,rs485-enabled-at-boot-time to device tree

--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -261,6 +261,7 @@
 
 	fsl,uart-has-rtscts;
 	fsl,uart-tx-enable-gpios = <&gpio1 22 GPIO_ACTIVE_LOW>;
+	linux,rs485-enabled-at-boot-time;
 };
 
 &uart3 {
