ts4100: Fix reset, and syntax for "okay"

--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -333,11 +333,11 @@
 };
 
 &snvs_rtc {
-	status = "ok";
+	status = "okay";
 };
 
 &snvs_poweroff {
-	status = "disabled";
+	status = "okay";
 };
 
 &wdog1 {
