--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -137,8 +137,8 @@
 };
 
 &ecspi3 {
-	fsl,spi-num-chipselects = <2>;
-	cs-gpios = <&gpio4 12 0>, <&gpio4 10 0>;
+	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <&gpio4 12 0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3>;
 	status = "okay";
@@ -146,12 +146,6 @@
 	spidevfpga: spi@0 {
 		compatible = "spidev";
 		reg = <0>;
-		spi-max-frequency = <1000000>;
-	};
-
-	spioffbd: spi@1 {
-		compatible = "spidev";
-		reg = <1>;
 		spi-max-frequency = <1000000>;
 	};
 };
