Fixed name to be consistent with 7990 for android's attached backlight

--- a/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
@@ -61,7 +61,7 @@
 		#size-cells = <0>;
 	};
 
-	backlight_lcd {
+	backlight0 {
 		compatible = "pwm-backlight";
 		pwms = <&pwm3 0 5000000>;
 		brightness-levels = <0 128 140 160 180 200 220 240 255>;
