Fix sgtl5000 model name for android

--- a/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-ts4900-ts8390.dtsi
@@ -104,7 +104,7 @@
 			"Mic Jack", "Mic Bias",
 			"Headphone Jack", "HP_OUT";
 		compatible = "fsl,imx-audio-sgtl5000";
-		model = "On-board Codec";
+		model = "sgtl5000-audio";
 		mux-ext-port = <3>;
 		mux-int-port = <1>;
 		ssi-controller = <&ssi1>;
