Fixed the wilc3000 wifi driver to use probe() so that it may use the gpios defined in device-tree.  This required a patch to the kernel so that if the driver returns -EPROBE_DEFER because the i2c-based gpio pins are not yet available, the device will be reprobed later. For boards that are using cpu-based gpio, this change is not needed, and the change to the kernel should be harmless.

--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -171,9 +171,9 @@
 		compatible = "atmel,wilc_spi";
 		reg = <0>;
 		spi-max-frequency = <24000000>;
-		wilc3000,reset-gpios = <&gpio6 1 0>;
-		wilc3000,chip-en-gpios = <&gpio6 0 0>;
-		wilc3000,irq-gpios = <&gpio5 8 0>;
+		wilc3000,reset-gpios = <&gpio6 0 0>;     /* RESET,  GPIO 160 */
+		wilc3000,chip-en-gpios = <&gpio6 1 0>;   /* ENABLE, GPIO 161 */
+		wilc3000,irq-gpios = <&gpio5 8 0>;       /* IRQ,    GPIO 136 */
 		status = "okay";
     };
 };
