--- a/arch/arm/boot/dts/imx6ul-ts4100.dtsi
+++ b/arch/arm/boot/dts/imx6ul-ts4100.dtsi
@@ -161,9 +161,9 @@
 		compatible = "atmel,wilc_spi";
 		reg = <0>;
 		spi-max-frequency = <24000000>;
-		wilc3000,reset-gpios = <&gpio6 21 0>;
-		wilc3000,chip-en-gpios = <&gpio6 20 0>;
-		wilc3000,irq-gpios = <&gpio5 8 0>;
+		wilc3000,reset-gpios = <&gpio6 21 0>;      /* RESET,  GPIO 181 */
+		wilc3000,chip-en-gpios = <&gpio6 20 0>;    /* ENABLE, GPIO 180 */
+		wilc3000,irq-gpios = <&gpio5 8 0>;         /* IRQ,    GPIO 136 */
 		status = "okay";
     };
 };
