--- a/arch/arm/boot/dts/imx6ul-ts7553v2.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7553v2.dts
@@ -200,9 +200,9 @@
 		compatible = "atmel,wilc_spi";
 		reg = <0>;
 		spi-max-frequency = <24000000>;
-		wilc3000,reset-gpios = <&gpio4 10 0>;
-		wilc3000,chip-en-gpios = <&gpio4 26 0>;
-		wilc3000,irq-gpios = <&gpio5 01 0>;
+		wilc3000,reset-gpios = <&gpio4 10 0>;     /* RESET,  GPIO 106 */
+		wilc3000,chip-en-gpios = <&gpio4 26 0>;   /* ENABLE, GPIO 122 */
+		wilc3000,irq-gpios = <&gpio5 01 0>;       /* IRQ,    GPIO 129 */
 		status = "okay";
 	};
 };
