--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -91,8 +91,7 @@
 			states = <1300000 0x1 1400000 0x0>;
 		};
 
-		/*
-		reg_usb_otg1_vbus: regulator@2 {
+			reg_usb_otg1_vbus: regulator@2 {
 			compatible = "regulator-fixed";
 			reg = <2>;
 			pinctrl-names = "default";
@@ -103,8 +102,8 @@
 			gpio = <&gpio1 4 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
-   */
    
+      /*
 		reg_sd1_vmmc: sd1_vmmc {
 			compatible = "regulator-fixed";
 			regulator-name = "SD1_SPWR";
@@ -113,6 +112,7 @@
 			gpio = <&gpio4 26 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
+		*/
 		
 		reg_adc_vref: adc_vref {
 			compatible = "regulator-fixed";
@@ -298,7 +298,7 @@
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
 	bus-width = <4>;
-	vmmc-supply = <&reg_sd1_vmmc>;
+	//vmmc-supply = <&reg_sd1_vmmc>;
 	status = "okay";
 };
 
@@ -393,13 +393,11 @@
 			>;
 		};
 
-		/*
 		pinctrl_usb_otg1: usbotg1grp {
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0x10b0
 			>;
 		};
-   */
 
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
