--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -141,8 +141,8 @@
 };
 
 &ecspi3 {
-	fsl,spi-num-chipselects = <2>;
-	cs-gpios = <&gpio4 12 0>, <&gpio4 10 0>;
+	fsl,spi-num-chipselects = <3>;
+	cs-gpios = <&gpio4 12 0>, <&gpio4 10 0>, <&gpio4 27 0>;
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_ecspi3>;
 	status = "okay";
@@ -156,6 +156,12 @@
 	spioffbd: spi@1 {
 		compatible = "spidev";
 		reg = <1>;
+		spi-max-frequency = <1000000>;
+	};
+
+	spifram: spi@2 {
+		compatible = "spidev";
+		reg = <2>;
 		spi-max-frequency = <1000000>;
 	};
 };
@@ -602,6 +608,7 @@
 				MX6UL_PAD_NAND_CE1_B__ECSPI3_MOSI   0x10b0
 				MX6UL_PAD_NAND_CLE__ECSPI3_MISO     0x10b0
 				MX6UL_PAD_NAND_ALE__GPIO4_IO10      0x10b0 // SPI_3_OFF_BD_CS#
+				MX6UL_PAD_CSI_DATA06__GPIO4_IO27    0x10b0 // FRAM_SPI_CS#
 			>;
 		};
 
