--- a/arch/arm/boot/dts/imx6ul-ts7180.dts
+++ b/arch/arm/boot/dts/imx6ul-ts7180.dts
@@ -91,6 +91,7 @@
 			states = <1300000 0x1 1400000 0x0>;
 		};
 
+		/*
 			reg_usb_otg1_vbus: regulator@2 {
 			compatible = "regulator-fixed";
 			reg = <2>;
@@ -102,17 +103,17 @@
 			gpio = <&gpio1 4 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
-   
-      /*
+   */
+
 		reg_sd1_vmmc: sd1_vmmc {
 			compatible = "regulator-fixed";
 			regulator-name = "SD1_SPWR";
 			regulator-min-microvolt = <3000000>;
 			regulator-max-microvolt = <3000000>;
-			gpio = <&gpio4 26 GPIO_ACTIVE_HIGH>;
+			gpio = <&gpio6 14 GPIO_ACTIVE_HIGH>;
 			enable-active-high;
 		};
-		*/
+		
 		
 		reg_adc_vref: adc_vref {
 			compatible = "regulator-fixed";
@@ -304,7 +305,7 @@
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
 	bus-width = <4>;
-	//vmmc-supply = <&reg_sd1_vmmc>;
+	vmmc-supply = <&reg_sd1_vmmc>;
 	status = "okay";
 };
 
@@ -399,11 +400,13 @@
 			>;
 		};
 
+		/*
 		pinctrl_usb_otg1: usbotg1grp {
 			fsl,pins = <
 				MX6UL_PAD_GPIO1_IO04__GPIO1_IO04        0x10b0
 			>;
 		};
+     */
 
 		pinctrl_flexcan1: flexcan1grp{
 			fsl,pins = <
